# oneseismic

./: .gitignore  .project  Dockerfile  docker-compose_tests.yml
api/api/: result.go
api/cmd/fetch/: fetch.go
core/: CMakeLists.txt
core/include/oneseismic/: messages.hpp
python/oneseismic/client/: __init__.py  client.py  simplegui.py
python/oneseismic/client/tests/: client_test.py
python/oneseismic/examples/: profiling.py  progressive_load_slice.py  synchronous_load_slice.py
